update html and css and make them much,  much better

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,49 +1,29 @@
 body {
   background-color: #B5B4C4;
+  font-family: Bitter, Serif;
 }
 
-h1  {
+.container {
+  align-content: center;
+}
+
+h1 {
   font-weight: bolder;
-  font-family: Bitter, Serif;
   text-align: center;
   border: 5px solid black;
 }
-p {
-  font-family: Bitter, Serif;
+.content {
+  align-content: center;
+  text-align: center;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
   margin-top: 5px;
   margin-bottom: 5px;
   padding-top: 7px;
   padding-bottom: 7px;
+  clear: right;
 }
 
-img {
-  zoom: 10%;
-}
-
-#first {
-  position: relative;
-  text-align: right;
-bottom: 350px;
-margin-right:350px;
-}
-#second {
-  position: relative;
-  text-align: right;
-bottom: 369px;
-margin-right:275px;
-}
-#third {
-  position: relative;
-  text-align: right;
-bottom: 388px;
-margin-right:2px;
-}
-#fourth {
-  position: relative;
-  text-align: right;
-bottom: 406px;
-margin-right:125px;
-margin-left: 10px;
+ .button {
+  float: right;
 }
