--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/silk.jpg");
+  background-image: url("../images/holy.jpg");
   font-family: Bitter, Serif;
   color: whitesmoke;
   margin: 0;
@@ -32,6 +32,10 @@ h1 {
   margin: 5px;
 }
 
+#nav > button > a {
+  color: #0F1112;
+}
+
 #sidebar {
   text-align: center;
 }
@@ -43,4 +47,20 @@ h1 {
 
 a {
   text-decoration: none;
+}
+
+a:link {
+  color: whitesmoke;
+}
+
+a:visited {
+  color: #7F6B00;
+}
+
+a:hover {
+  color: #A5974C;
+}
+
+a:active {
+  color: #3f3500;
 }
